[package]
name = "casket"
version = "0.2.0"
authors = ["Ida Kenichiro <ida.kenichiro@gmail.com>"]
description = "Kyoto Cabinet bindings for Rust."
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
failure = "0.1.7"

[dependencies.ffi]
version = "*"
path = "kyotocabinet-sys"
package = "kyotocabinet-sys"

[dev-dependencies]
tempfile = "3.1.0"
