[package]
name = "casket"
version = "0.3.0"
authors = ["IDA Kenichiro <ida.kenichiro@gmail.com>"]
description = "Kyoto Cabinet bindings for Rust."
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1.0.32"
thiserror = "1.0.20"

[dependencies.ffi]
version = "*"
path = "kyotocabinet-sys"
package = "kyotocabinet-sys"

[dev-dependencies]
tempfile = "3.1.0"
